welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:6: error: illegal start of simple expression
	else   { return 0 }
        ^